--- a/final product/app/build.gradle
+++ b/final product/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile files('libs/bolts-android-1.3.0.jar')
     compile files('libs/Parse-1.11.1.jar')
+    compile 'com.google.android.gms:play-services:7.3.0'
 }
